--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,4 +14,4 @@ jobs:
         server: ftpupload.net
         username: epiz_24922395
         password: ${{ secrets.ftp_password }}
-        server-dir: ./invisiprojs.rf.gd/htdocs
+        server-dir: ./invisiprojs.rf.gd/htdocs/
